--- a/app/src/main/res/layout/home_game_table_item_4.xml
+++ b/app/src/main/res/layout/home_game_table_item_4.xml
@@ -37,7 +37,7 @@
         android:id="@+id/tv_game_odd_match_cards_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorRedDark"
+        android:background="@color/color_F75452_b73a20"
         android:textColor="@color/color_191919_FCFCFC"
         android:textSize="@dimen/textSize14sp"
         android:visibility="visible"
@@ -54,7 +54,7 @@
         android:layout_width="34dp"
         android:layout_height="wrap_content"
         android:paddingEnd="10dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_game_name_home"
         app:layout_constraintStart_toStartOf="@+id/table_match_info_border"
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="0dp"
         android:paddingEnd="8dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize14sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tv_game_name_home"
@@ -115,7 +115,7 @@
         android:id="@+id/tv_game_odd_match_cards_away"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorRedDark"
+        android:background="@color/color_F75452_b73a20"
         android:textColor="@color/color_191919_FCFCFC"
         android:textSize="@dimen/textSize14sp"
         android:visibility="visible"
@@ -133,7 +133,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="0dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_game_name_away"
         app:layout_constraintStart_toStartOf="@+id/table_match_info_border"
@@ -164,7 +164,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="0dp"
         android:paddingEnd="8dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize14sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tv_game_name_away"
