--- a/app/src/main/res/layout/item_other_bet_record.xml
+++ b/app/src/main/res/layout/item_other_bet_record.xml
@@ -85,7 +85,7 @@
                 app:moneyColor="@{data.netAmount}"
                 app:profitFormat="@{data.netAmount}"
                 tools:text="+1,060.00"
-                tools:textColor="@color/colorGreen" />
+                tools:textColor="@color/color_08dc6e_08dc6e" />
 
         </LinearLayout>
 
