--- a/app/src/main/res/layout/itemview_game_league_odd_1x2.xml
+++ b/app/src/main/res/layout/itemview_game_league_odd_1x2.xml
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintBottom_toBottomOf="@id/match_row_1x2"
         app:layout_constraintStart_toEndOf="@id/match_status_1x2"
@@ -112,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize16sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@id/game_name_home_1x2"
@@ -140,7 +140,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize16sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@id/game_name_away_1x2"
