--- a/app/src/main/res/layout/itemview_game_league_odd_hdp_ou.xml
+++ b/app/src/main/res/layout/itemview_game_league_odd_hdp_ou.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintBottom_toBottomOf="@id/match_row"
         app:layout_constraintStart_toEndOf="@id/match_status"
@@ -157,7 +157,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/match_odd_column2_home"
@@ -204,7 +204,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/match_odd_column2_away"
