--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -132,7 +132,7 @@
             android:id="@+id/league_odd_match_cards_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorRedDark"
+            android:background="@color/color_F75452_b73a20"
             android:paddingHorizontal="1dp"
             android:textColor="@color/color_191919_FCFCFC"
             android:textSize="@dimen/textSize12sp"
@@ -150,7 +150,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:textColor="@color/colorRedDark"
+            android:textColor="@color/color_F75452_b73a20"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBottom_toBottomOf="@id/league_odd_match_name_home"
             app:layout_constraintEnd_toStartOf="@+id/league_odd_match_name_home"
@@ -194,7 +194,7 @@
             android:id="@+id/league_odd_match_total_score_home_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorRedDark"
+            android:textColor="@color/color_F75452_b73a20"
             android:textSize="@dimen/textSize14sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/guide_game_center"
@@ -233,7 +233,7 @@
             android:id="@+id/league_odd_match_cards_away"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorRedDark"
+            android:background="@color/color_F75452_b73a20"
             android:paddingHorizontal="1dp"
             android:textColor="@color/color_191919_FCFCFC"
             android:textSize="@dimen/textSize12sp"
@@ -251,7 +251,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:textColor="@color/colorRedDark"
+            android:textColor="@color/color_F75452_b73a20"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBottom_toBottomOf="@id/league_odd_match_name_away"
             app:layout_constraintEnd_toStartOf="@+id/league_odd_match_name_away"
@@ -295,7 +295,7 @@
             android:id="@+id/league_odd_match_total_score_away_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorRedDark"
+            android:textColor="@color/color_F75452_b73a20"
             android:textSize="@dimen/textSize14sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/guide_game_bottom"
