--- a/app/src/main/res/color/selector_button_odd_bg_green.xml
+++ b/app/src/main/res/color/selector_button_odd_bg_green.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/colorGreen" />
+    <item android:color="@color/color_08dc6e_08dc6e" />
     <item android:color="@color/color_FF9E3C_FF9E3C" android:state_selected="true" />
 </selector>
