--- a/app/src/main/res/drawable/bg_radius_0_button_green.xml
+++ b/app/src/main/res/drawable/bg_radius_0_button_green.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorGreenKeppel" />
+    <solid android:color="@color/color_34CB8A_3db893" />
 </shape>
