--- a/app/src/main/res/drawable/bg_radius_4_button_unselected_red.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_unselected_red.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
-    <solid android:color="@color/colorRedPersian" />
+    <solid android:color="@color/color_ce3636_ce3636" />
 </shape>
