--- a/app/src/main/res/drawable/effect_edittext_bg.xml
+++ b/app/src/main/res/drawable/effect_edittext_bg.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="4dp" />
             <solid android:color="@color/color_191919_FCFCFC" />
-            <stroke android:width="1dp" android:color="@color/colorRed" />
+            <stroke android:width="1dp" android:color="@color/color_E44438_e44438" />
         </shape>
     </item>
 
