--- a/app/src/main/res/layout/activity_credit_record.xml
+++ b/app/src/main/res/layout/activity_credit_record.xml
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="@string/credit_record_deactivate"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintBottom_toBottomOf="@id/credit_record_remain_border"
         app:layout_constraintStart_toStartOf="@id/credit_record_remain_border"
@@ -83,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="14dp"
-        android:textColor="@color/colorGreen"
+        android:textColor="@color/color_08dc6e_08dc6e"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintBottom_toBottomOf="@id/credit_record_quota_border"
         app:layout_constraintEnd_toEndOf="@id/credit_record_quota_border"
