--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -516,7 +516,7 @@
                     android:text="@string/not_verify"
                     android:gravity="end"
                     android:textAlignment="textEnd"
-                    android:textColor="@color/colorRed"
+                    android:textColor="@color/color_E44438_e44438"
                     android:textSize="@dimen/textSize12sp" />
 
                 <ImageView
