--- a/app/src/main/res/layout/activity_withdraw_commission_detail.xml
+++ b/app/src/main/res/layout/activity_withdraw_commission_detail.xml
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="10dp"
-            android:textColor="@color/colorRed"
+            android:textColor="@color/color_E44438_e44438"
             android:textSize="14sp"
             tools:text="-300.000" />
 
