--- a/app/src/main/res/layout/content_cant_parlay_warn.xml
+++ b/app/src/main/res/layout/content_cant_parlay_warn.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/bet_list_cant_parlay_warn"
-            android:textColor="@color/colorRed"
+            android:textColor="@color/color_E44438_e44438"
             android:textSize="@dimen/textSize12sp" />
     </LinearLayout>
 
