--- a/app/src/main/res/layout/content_keyboard.xml
+++ b/app/src/main/res/layout/content_keyboard.xml
@@ -173,7 +173,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="4dp"
-                android:textColor="@color/colorRed"
+                android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize13sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
