--- a/app/src/main/res/layout/dialog_self_limit_froze.xml
+++ b/app/src/main/res/layout/dialog_self_limit_froze.xml
@@ -63,7 +63,7 @@
                 android:gravity="center_horizontal"
                 android:layout_marginLeft="@dimen/margin_25"
                 android:layout_marginRight="@dimen/margin_25"
-                android:textColor="@color/colorRed"
+                android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize14sp"
                 tools:text="訊息" />
 
