--- a/app/src/main/res/layout/edittext_login.xml
+++ b/app/src/main/res/layout/edittext_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
         android:text="@string/start"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintBottom_toBottomOf="@id/block_editText"
         app:layout_constraintEnd_toStartOf="@id/block_editText"
@@ -138,7 +138,7 @@
         android:layout_marginTop="10dp"
         android:drawablePadding="5dp"
         android:gravity="center_vertical"
-        android:textColor="@color/colorRedDark"
+        android:textColor="@color/color_F75452_b73a20"
         android:textSize="@dimen/textSize12sp"
         android:visibility="gone"
         app:drawableStartCompat="@drawable/ic_error_tip"
