--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -378,7 +378,7 @@
                 android:paddingEnd="@dimen/margin_8"
                 android:paddingBottom="10dp"
                 android:text="@string/bet_info_odd_content_changed"
-                android:textColor="@color/colorRed"
+                android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize12sp"
                 android:visibility="gone"
                 tools:visibility="visible" />
@@ -428,14 +428,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/bet_info_odd_content_changed"
-                    android:textColor="@color/colorRed"
+                    android:textColor="@color/color_E44438_e44438"
                     android:textSize="@dimen/textSize12sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/bet_info_odd_content_close"
-                    android:textColor="@color/colorRed"
+                    android:textColor="@color/color_E44438_e44438"
                     android:textSize="@dimen/textSize12sp" />
 
                 <TextView
