--- a/app/src/main/res/layout/fragment_money_transfer.xml
+++ b/app/src/main/res/layout/fragment_money_transfer.xml
@@ -53,7 +53,7 @@
         android:paddingEnd="0dp"
         android:paddingBottom="12dp"
         android:text="@string/one_button_click_will_recycle_all_money_into_account"
-        android:textColor="@color/colorRed"
+        android:textColor="@color/color_E44438_e44438"
         android:textSize="@dimen/textSize13sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_recycle"
         app:layout_constraintTop_toBottomOf="@id/view_refresh" />
