--- a/app/src/main/res/layout/item_account_history_next_content_parlay.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay.xml
@@ -138,7 +138,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textColor="@color/colorRed"
+                android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize12sp"
                 app:betReceiptStatus="@{row.status}"
                 app:statusVisibility="@{row.status}"
