--- a/app/src/main/res/layout/item_bet_list_batch_control_connect.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect.xml
@@ -246,7 +246,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
                 android:textSize="@dimen/textSize13sp"
-                android:textColor="@color/colorRed"
+                android:textColor="@color/color_E44438_e44438"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_bet"
