--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v2.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v2.xml
@@ -293,7 +293,7 @@
                         android:layout_marginStart="24dp"
                         android:layout_marginTop="@dimen/margin_4"
                         android:layout_marginBottom="@dimen/margin_4"
-                        android:textColor="@color/colorRed"
+                        android:textColor="@color/color_E44438_e44438"
                         android:textSize="@dimen/textSize13sp"
                         android:visibility="gone"
                         app:layout_constraintBottom_toTopOf="@+id/layoutKeyBoard"
