--- a/app/src/main/res/layout/view_odds_detail_toolbar.xml
+++ b/app/src/main/res/layout/view_odds_detail_toolbar.xml
@@ -168,7 +168,7 @@
                 android:id="@+id/tv_home_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/colorRed"
+                android:background="@color/color_E44438_e44438"
                 android:textColor="@color/color_191919_FCFCFC"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
@@ -185,7 +185,7 @@
                 android:id="@+id/tv_away_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/colorRed"
+                android:background="@color/color_E44438_e44438"
                 android:textColor="@color/color_191919_FCFCFC"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
