--- a/app/src/main/res/layout/view_submit_with_text_count.xml
+++ b/app/src/main/res/layout/view_submit_with_text_count.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text="@string/must_fill_this_column"
-            android:textColor="@color/colorRedDark"
+            android:textColor="@color/color_F75452_b73a20"
             android:textSize="@dimen/textSize14sp"/>
 
     </LinearLayout>
