--- a/app/src/main/res/layout/view_upload.xml
+++ b/app/src/main/res/layout/view_upload.xml
@@ -65,7 +65,7 @@
         android:layout_marginBottom="10dp"
         android:visibility="gone"
         tools:visibility="visible"
-        android:textColor="@color/colorRed"
+        android:textColor="@color/color_E44438_e44438"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
