--- a/app/src/main/res/layout/itemview_sport_type_list.xml
+++ b/app/src/main/res/layout/itemview_sport_type_list.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:orientation="horizontal"
+        android:overScrollMode="never"
         android:paddingHorizontal="13dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
