[調整] 消息中心 Title、Tab英文文字

--- a/app/src/main/res/layout/custom_tab_layout.xml
+++ b/app/src/main/res/layout/custom_tab_layout.xml
@@ -12,6 +12,7 @@
         android:id="@+id/tab_layout_custom"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        app:tabTextAppearance="@style/NoUppercaseTab"
         app:tabIndicator="@drawable/custom_tab_indicator"
         app:tabIndicatorFullWidth="false"
         app:tabMode="fixed"
