[調整] (快捷)投注單 spread, odds 粗體

--- a/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item.xml
@@ -197,6 +197,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                                 android:layout_marginTop="10dp"
+                                android:textStyle="bold"
                                 android:textColor="@color/colorRedDark"
                                 android:textSize="@dimen/textSize13sp"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -227,6 +228,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                                android:textStyle="bold"
                                 android:textColor="@color/colorBlue"
                                 android:textSize="@dimen/margin_14"
                                 app:layout_constraintEnd_toEndOf="parent"
