--- a/app/src/main/res/layout/content_bet_info_item_v2.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v2.xml
@@ -168,6 +168,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentEnd="true"
                                 android:textColor="@color/colorRedDark"
+                                android:textStyle="bold"
                                 android:textSize="@dimen/textSize13sp"
                                 tools:text="-0.5/2" />
                         </RelativeLayout>
@@ -195,6 +196,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                            android:textStyle="bold"
                             android:textColor="@color/colorBlue"
                             android:textSize="@dimen/margin_14"
                             app:layout_constraintEnd_toEndOf="parent"
